--- a/lib/samplesite/themes/deic-blog/post.twig
+++ b/lib/samplesite/themes/deic-blog/post.twig
@@ -25,6 +25,7 @@
 
     <!-- Custom CSS -->
     <link href="{{ theme_url }}/css/clean-blog.css" rel="stylesheet">
+    <link href="{{ theme_url }}/css/modal-images.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="{{ theme_url }}/css/font-awesome.css" rel="stylesheet" type="text/css">
@@ -89,7 +90,7 @@
 			{% endif %}
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                     <div class="post-heading">
                         <h1>{{ meta.title }}</h1>
                         <h2 class="subheading">{{ meta.description }}</h2>
@@ -114,7 +115,7 @@
     <article>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 					{{ content }}
                 </div>
             </div>
@@ -150,7 +151,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
                         <li>
                             <a href="https://twitter.com/home?status={{ current_page.url }}" target="_blank" rel="noopener noreferrer">
@@ -169,10 +170,10 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/share?url={{ current_page.url }}" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ current_page.url }}" target="_blank" rel="noopener noreferrer">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
+                                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
