--- a/lib/samplesite/themes/deic-doc/index.twig
+++ b/lib/samplesite/themes/deic-doc/index.twig
@@ -95,11 +95,12 @@
     </div>
   </div>
 
-  <script type="text/x-mathjax-config">
+	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
-		  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+	 		tex2jax: {ignoreClass: 'ace_content',  inlineMath: [['$','$'], ['\\(','\\)']] },
+	 		TeX: {extensions: ['mhchem.js']}
 		});
 	</script>
-  <script src="/apps/files_markdown/js/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+	<script src="/apps/files_markdown/js/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </body>
 </html>
